# teleskopio

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  Dockerfile  LICENSE  Makefile  README.md  components.json  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 10_bug_report.yaml  20_feature_request.yml  config.yaml
.github/workflows/: ci.yaml  docker.yaml  ghpages.yaml  release.yaml  release.yml  release_build.yaml  test.yaml
blog/: eleventy.config.js  package.json
cmd/: app.go
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.css  loaders.ts  main.tsx  router.tsx  settings.tsx  types.ts  util.ts
frontend/src/components/: AppSidebar.tsx  Header.tsx  Layout.tsx  LoginForm.tsx  NamespaceSelector.tsx
frontend/src/context/: AuthProvider.tsx  ConfigContext.tsx  WsContext.tsx
frontend/src/lib/: api.ts  events.ts  localStorage.ts
frontend/src/store/: cluster.ts  helm.ts  kubeconfigs.ts  loader.ts  resources.ts
pages/: eleventy.config.js  package.json
pages/_site/: 404.html  index.html
pages/_site/blog/: index.html
pages/_site/tags/: index.html
pages/content/blog/: releasepost.md
pkg/cache/: cache.go
pkg/config/: config.TEMPLATE.yaml  config.go  config_test.go
pkg/middleware/: middleware.go
pkg/model/: model.go
pkg/router/: router.go  struct.go
pkg/socket/: socket.go
src/: App.css  App.tsx  loaders.ts  main.tsx  router.tsx  settings.tsx  types.ts  userWorker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: k8s.rs  lib.rs  main.rs
src/components/: AppSidebar.tsx  ErrorPage.tsx  Header.tsx  Heartbeat.tsx  KubeConnect.tsx  Layout.tsx  NamespaceSelector.tsx  Namespaces.tsx  SearchField.tsx  Sidebar.tsx  ThemeProvider.tsx  Tooltip.tsx  app-sidebar.tsx
src/components/links/: Access.tsx  Cluster.tsx  Config.tsx  Network.tsx  Storage.tsx  Workloads.tsx
src/components/pages/: Access.tsx  Cluster.tsx  Config.tsx  Configs.tsx  Network.tsx  PodPage.tsx  PodsLayout.tsx  Settings.tsx  (+3 more)
src/lib/: api.ts  events.ts  subscriptionManager.ts
src/store/: cluster.ts  configmaps.ts  configs.ts  crd-resources.ts  cronjobs.ts  currentCluster.ts  daemonsets.ts  deployments.ts  ingresses.ts  jobs.ts  kubeconfigs.ts  loader.ts  namespaces.ts  networkpolicies.ts  nodes.ts  page.ts  pods.ts  pvs.ts  replicasets.ts  resource-events.ts  resources.ts  roles.ts  secrets.ts  serviceaccounts.ts  services.ts  statefulsets.ts  storageclasses.ts  version.ts
(+242 files in other folders)
