[package]
name = "teleskopio"
version = "0.0.1"
description = "Teleskopio is an open-source small and beautiful Kubernetes client."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "teleskopio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
walkdir = "2"
futures = "0.3"
log = "0.4"
either = "1.15.0"
lazy_static = "1.4"
env_logger = "0.11"
dirs = "5"
kube = { version = "1.1.0", features = [ "socks5", "http-proxy", "client", "runtime", "config" ] }
k8s-openapi = { version = "0.25.0", features = [ "latest" ] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
once_cell = "1.19"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3.31"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
window-vibrancy = "0.4.2"

